# ParallelComputeLab

./: .gitignore  README.md
cpp_opencl/: CMakeLists.txt  build.ps1  build.sh  run.sh
cpp_opencl/src/: main.cpp  vecadd_kernel.cl
rust_opencl/: Cargo.toml
rust_opencl/examples/: convolution.rs  histogram.rs  rotation.rs  vecadd.rs
rust_opencl/kernels/: convolution.cl  histogram.cl  rotation.cl  vecadd_kernel.cl
rust_opencl/src/: utils.rs
rust_wgpu/: Cargo.toml
rust_wgpu/examples/: adapters.rs  convolution.rs  rotation.rs  vectoradd.rs
rust_wgpu/src/: lib.rs
rust_wgpu/wgsl/: convolution.wgsl  rotation.wgsl  vectoradd.wgsl
