[package]
name = "rust_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1.4", features = ["derive"] }
futures = "0.3"
futures-channel = "0.3"
image = "0.24"
